[gd_scene load_steps=7 format=3 uid="uid://cxb6dif7pqgss"]

[ext_resource type="Script" uid="uid://6e2vio7clwsi" path="res://BrainVisualizer/UI/Windows/MappingEditor/GenericMappingDetailSettings.gd" id="1_a7y6g"]
[ext_resource type="Texture2D" uid="uid://b4jkpvgo7fes3" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/Plus_S.png" id="2_na2v5"]
[ext_resource type="Texture2D" uid="uid://dm7j5k1l27tvy" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/Plus_C.png" id="3_5epqe"]
[ext_resource type="Texture2D" uid="uid://btuaycki4ux0h" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/Plus_H.png" id="4_rplnj"]
[ext_resource type="Texture2D" uid="uid://df4tfd8cxsr4c" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/Plus_D.png" id="5_o7ap7"]
[ext_resource type="PackedScene" uid="uid://b4cfpdwwgj8q8" path="res://BrainVisualizer/UI/GenericElements/Scroll/ScrollGeneric/ScrollSectionGeneric.tscn" id="6_nnmhp"]

[node name="GenericMappingDetailSettings" type="VBoxContainer"]
size_flags_vertical = 0
script = ExtResource("1_a7y6g")

[node name="Label9" type="Label" parent="."]
custom_minimum_size = Vector2(1300, 0)
layout_mode = 2
text = "Established Mappings"

[node name="labels_box" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_type_variation = &"HBoxContainer_farther"

[node name="Label" type="Label" parent="labels_box"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Mapping Definition"

[node name="edit_placeholder" type="Control" parent="labels_box"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4

[node name="Label2" type="Label" parent="labels_box"]
custom_minimum_size = Vector2(270, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Overwrite Scalar [X, Y, Z]"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="labels_box"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Plasticity Multiplier"
mouse_filter = 1
text = "PSP Multi."
horizontal_alignment = 1

[node name="Label8" type="Label" parent="labels_box"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Inhibitory"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="labels_box"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Plasticity"
horizontal_alignment = 1

[node name="Label5" type="Label" parent="labels_box"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Plasticity Constant"
mouse_filter = 1
text = "Plast. Const."
horizontal_alignment = 1

[node name="Label6" type="Label" parent="labels_box"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "LTP Multiplier"
mouse_filter = 1
text = "LTP Multi."
horizontal_alignment = 1

[node name="Label7" type="Label" parent="labels_box"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "LTD Multi."
horizontal_alignment = 1

[node name="add_button" type="TextureButton" parent="labels_box"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Add Mapping"
theme_type_variation = &"TextureButton_icon"
texture_normal = ExtResource("2_na2v5")
texture_pressed = ExtResource("3_5epqe")
texture_hover = ExtResource("4_rplnj")
texture_disabled = ExtResource("5_o7ap7")
ignore_texture_size = true
stretch_mode = 0

[node name="ScrollSectionGeneric" parent="." instance=ExtResource("6_nnmhp")]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[connection signal="pressed" from="labels_box/add_button" to="." method="_add_mapping_row"]
